@@ -7,16 +7,18 @@ import com.Guard.Back.Dto.KakaoUserInfoResponseDto;
 import com.Guard.Back.Jwt.JwtTokenProvider;
 import com.Guard.Back.Repository.RefreshTokenRepository;
 import com.Guard.Back.Repository.UserRepository;
-
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
-
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.Optional;
 
@@ -39,61 +41,51 @@ public class KakaoLoginController {
     @Value("${app.redirect-url}")
     private String appRedirectUrl;
 
-    // ✅ GET으로 수정해야 카카오 리디렉션에 정상 대응 가능
-    @GetMapping("/kakao-login")
+    @PostMapping("/kakao-login")
     public void kakaoLogin(@RequestParam String code, HttpServletResponse response) throws IOException {
-        System.out.println("🔑 받은 인가 코드: " + code);
-        // 1. 인가 코드를 이용해 Access Token 요청
+        // ✅ 1. 카카오 토큰 요청 (form 방식으로)
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
+        formData.add("grant_type", "authorization_code");
+        formData.add("client_id", clientId);
+        formData.add("redirect_uri", redirectUri);
+        formData.add("code", code);
+
         KakaoTokenResponseDto tokenResponse = webClient.post()
                 .uri("https://kauth.kakao.com/oauth/token")
-                .bodyValue("grant_type=authorization_code"
-                        + "&client_id=" + clientId
-                        + "&redirect_uri=" + redirectUri
-                        + "&code=" + code)
+                .header("Content-Type", "application/x-www-form-urlencoded")
+                .body(BodyInserters.fromFormData(formData))
                 .retrieve()
                 .bodyToMono(KakaoTokenResponseDto.class)
                 .block();
-        System.out.println("🟡 카카오 access_token: " + tokenResponse.getAccess_token());
-        System.out.println("🟡 카카오 refresh_token: " + tokenResponse.getRefresh_token());
 
-        // 2. 카카오 사용자 정보 조회
+        // ✅ 2. 사용자 정보 요청
         KakaoUserInfoResponseDto userInfo = webClient.get()
                 .uri("https://kapi.kakao.com/v2/user/me")
                 .header("Authorization", "Bearer " + tokenResponse.getAccess_token())
                 .retrieve()
                 .bodyToMono(KakaoUserInfoResponseDto.class)
                 .block();
-        System.out.println("👤 사용자 id: " + userInfo.getId());
-        System.out.println("👤 nickname: " + userInfo.getProperties().get("nickname"));
-        System.out.println("👤 profile_image: " + userInfo.getProperties().get("profile_image"));
-
 
         String kakaoId = String.valueOf(userInfo.getId());
         String nickname = userInfo.getProperties().get("nickname");
         String profileImage = userInfo.getProperties().get("profile_image");
 
-        // 3. 사용자 DB 저장 or 조회
+        // ✅ 3. 사용자 DB 등록 or 조회
         Optional<User> optionalUser = userRepository.findByKakaoId(kakaoId);
-        User user = optionalUser.orElseGet(() ->
-                userRepository.save(
-                        User.builder()
-                                .kakaoId(kakaoId)
-                                .nickname(nickname)
-                                .profileImage(profileImage)
-                                .role("USER")
-                                .build()
-                )
-        );
+        User user = optionalUser.orElseGet(() -> userRepository.save(
+                User.builder()
+                        .kakaoId(kakaoId)
+                        .nickname(nickname)
+                        .profileImage(profileImage)
+                        .role("USER")
+                        .build()
+        ));
 
-        // 4. JWT 발급
+        // ✅ 4. 토큰 생성
         String accessToken = jwtTokenProvider.createAccessToken(user.getId(), user.getNickname());
         String refreshToken = jwtTokenProvider.createRefreshToken();
 
-        System.out.println("✅ 최종 유저 ID(DB): " + user.getId());
-        System.out.println("✅ JWT accessToken: " + accessToken);
-        System.out.println("✅ JWT refreshToken: " + refreshToken);
-
-        // 5. 기존 Refresh Token 제거 후 새로 저장
+        // ✅ 5. RefreshToken 저장 (기존 토큰 제거)
         refreshTokenRepository.findByUser(user).ifPresent(refreshTokenRepository::delete);
         RefreshToken newToken = RefreshToken.builder()
                 .token(refreshToken)
@@ -103,12 +95,15 @@ public class KakaoLoginController {
                 .build();
         refreshTokenRepository.save(newToken);
 
-        // 6. React Native 앱으로 딥링크 리디렉션
+        // ✅ 6. 앱으로 리디렉션 (딥링크 guard://...)
         String redirectUrl = appRedirectUrl
-                + "?accessToken=" + URLEncoder.encode(accessToken, "UTF-8")
-                + "&refreshToken=" + URLEncoder.encode(refreshToken, "UTF-8")
-                + "&nickname=" + URLEncoder.encode(user.getNickname(), "UTF-8");
+                + "?accessToken=" + URLEncoder.encode(accessToken, StandardCharsets.UTF_8)
+                + "&refreshToken=" + URLEncoder.encode(refreshToken, StandardCharsets.UTF_8)
+                + "&nickname=" + URLEncoder.encode(user.getNickname(), StandardCharsets.UTF_8);
 
         response.sendRedirect(redirectUrl);
     }
+
+    // ⚠️ 딥링크용 응답 DTO는 필요 없지만 참고용으로 남겨둠
+    record LoginResponseDto(String accessToken, String refreshToken, String nickname) {}
 }
